temporary modificationto ui element while sizing issue is beign worked on (need to figure out how to eep from auto-scrolling if canvas is too big

--- a/projects/type-to-a-million/styles.css
+++ b/projects/type-to-a-million/styles.css
@@ -23,6 +23,7 @@ h1 {
 
 #myCanvas {
     align-self: center;
+    margin-top: -500px;
 }
 
 
